--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ distribution = true
 [dependency-groups]
 dev = [
     "ruff>=0.9.6",
+    "pytest>=8.3.5",
+    "trio>=0.30.0",
 ]
 docs = [
     "mkdocs-material>=9.6.11",
