--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ __pycache__
 # C extensions
 *.so
 
+
 # Distribution / packaging
 .Python
 env/
@@ -86,6 +87,7 @@ celerybeat-schedule
 
 # dotenv
 .env
+.env_test
 
 idea
 
